<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.realm.realmdemo.view.RentPropertyActivity">

  <EditText
      android:id="@+id/rent_value_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/rent_value"
      android:inputType="number"/>

  <EditText
      android:id="@+id/owner_name_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/owner_name"
      />

  <EditText
      android:id="@+id/complete_address_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/complete_address"
      />

  <AutoCompleteTextView
      android:id="@+id/locality_auto_complete_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/locality"/>


  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="saveClicked"
      android:text="@string/save"/>

</LinearLayout>
